Make mask on view optional.

--- a/snmp/files/snmpd.conf
+++ b/snmp/files/snmpd.conf
@@ -64,7 +64,7 @@ group {{ entry.name }} {{ entry.version }} {{ entry.secname }}
 # Make at least  snmpwalk -v 1 localhost -c public system fast again.
 #       name           incl/excl     subtree         mask(optional)
 {%- for entry in salt['pillar.get']('snmp:conf:views', '') %}
-view {{ entry.name }} {{ entry.type }} {{ entry.oid }} {{ entry.mask if entry.mask }}
+view {{ entry.name }} {{ entry.type }} {{ entry.oid }} {{ entry.mask if entry.mask else '' }}
 {%- endfor %}
 
 
